updated trying to get docker working, have java done, need to get sdkmanager working